# ecmwfspec

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/: dependabot.yml
.github/dependabot/: constraints.txt
.github/workflows/: dependabot-auto-changelog.yml  release.yml  tests.yml
ecmwfspec/: __init__.py  _version.py  core.py  ecfs_wrapper.py  xr_accessor.py
ecmwfspec/tests/: conftest.py  test_open_dataset.py
